--- a/src/components/text/index.module.scss
+++ b/src/components/text/index.module.scss
@@ -99,3 +99,7 @@
 	font-family: var(--font-family, 'Open Sans');
 	color: var(--font-color, #000);
 }
+
+.dynamicButton {
+	color: var(--font-color, #FFF);
+}
